fix buttons mobile

--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
 </head>
 <body>
 	
-	<header>
-		<div class="container">
-			
-			
-			<a class="downlad-btn" href="images/audreycv.pdf" download="audreycv.pdf">Téléchargez mon cv</a>
-		</div><!-- container -->
-	</header>
-	
+
 	<section class="intro-section">
 		<div class="container">
 			<div class="row">
@@ -51,6 +44,9 @@
 							<strong>Je suis actuellement à la recherche d'une opportunité en pâtisserie en Suisse.</strong>
 							</li>
 						</ul>
+						<button type="button" class="btn btn-primary">
+
+<a class="downlad-btn" href="images/audreycv.pdf" download="audreycv.pdf">Téléchargez mon cv</a> </button>
 
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
